Fix flicker when hovering over small area between parenthesis and a parameter

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -325,9 +325,19 @@ html, body {
 	}
 
 
+	.paren {
+		&.left {
+			padding-right: 5px;
+		}
+
+		&.right {
+			padding-left: 5px;
+		}
+	}
+
+
 	.params {
 		display: inline-block;
-		padding: 0 5px;
 
 		.param {
 			display: inline-block;
